@@ -59,6 +59,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
     - added ability to drag with left/right buttons
     - added depth display for TWBT (when multilevel is enabled)
     - made shift+click jump to lower levels visible with TWBT
+- `title-version`: added version to options screen too
 
 ## API
 - Removed Vermin module (unused and obsolete)
